--- a/static/contract-notify.html
+++ b/static/contract-notify.html
@@ -70,7 +70,7 @@
       formatQueryStr()
       var oAjax = new XMLHttpRequest();
       // 后端服务地址
-      var url = 'http://cphyw921.vicp.cc:21338/service-manage/contractDetailsController/updateOrderLinkToIsSigning?orderId=' + params.orderId
+      var url = 'https://manager.yichefenqi.com:8762/service-manage/contractDetailsController/updateOrderLinkToIsSigning?orderId=' + params.orderId
       oAjax.open("GET", url, true)
       oAjax.send()
       oAjax.onreadystatechange = function () {
