--- a/static/contract-notify.html
+++ b/static/contract-notify.html
@@ -54,7 +54,7 @@
   </div>
   <div id="info">
     <div class="h3">电子合同签署通知：</div>
-    <div class="h1">电子合同已经签署完毕，正在归档中，预计10分钟后和查看详情。</div>
+    <div class="h1">电子合同已经签署完毕，正在归档中，预计10分钟后可查看详情。</div>
     <div class="center">
       <button class="submit" onClick="onClick()">确定</button>
     </div>
